# CosineSimilarity

./: .gitignore  Readme.md
CosineSimBench/: CMakeLists.txt  CosineSimBench.sln  CosineSimBench.vcxproj  CosineSimBench.vcxproj.filters  bench.cmd  bench.sh  cosineSimdBench.cpp
CosineSimBench/Python/: benchmarkUtils.py  cosineSimdBench.py  python.cmd  python.sh  randomFloats.py
CosineSimBench/Tests/: cosineSim.h  scalar.cpp  simdNaive.cpp  simdParallel.cpp  simdUnrolled.cpp
CosineSimBench/Utils/: alignedVector.hpp  benchmarkUtils.cpp  benchmarkUtils.h  simdUtils.cpp  simdUtils.h
Results/: Results.xlsx
